New in version 1.2.0

Added documentation on the units used in the code.

Major revision on the multivariate polynomial interpolations. 
Now the routine can deal with an arbitrary number of variables.

Added a polynomial module to deal with multivariate polynomial 
of degree from 1 to 4.

Added the computation of the temperature dependent elastic constants
from the derivatives of the free energy with respect to strain within
the quasi-harmonic approximation (experimental version, in 
collaboration with C. Malica).

16/04/2019 Version 1.1.1 is now frozen.

Updated to QE 6.4.1

16/04/2019 Version 1.1.0 is now frozen.

Updated to QE 6.4

06/03/2019 Version 1.0.9 is now frozen 
New in Version 1.0.9

Added the plot of the elastic compliances and of the compressibility.

Added the plot of the isoentropic elastic constants.

Added the plot of the thermal stresses and of the generalized Gruneisen
parameters.

Conjugate gradient solver extended to US and PAW.

Phonon in the noncollinear/spin-orbit case extended to magnetic solids
(only metals and experimental).

Added the calculation of the B factor at fixed geometry and its interpolation 
at the temperature dependent geometry (contributed by C. Malica).

Added the possibility to use the pdf terminal of gnuplot 
to produce output in pdf files.

Sym_for_diago with pools improved (in collaboration with A. Urru).

Nonmagnetic linear response with FR-PAW corrected.

Stress in the noncollinear/spin-orbit case with GGA imported and corrected.

17/07/2018 Version 1.0.0 is now frozen
New in version 1.0.0

This version is identical to version 0.9.9, but it is compatible
with QE 6.3

05/07/2018 Version 0.9.9 is now frozen
New in Version 0.9.9

Added the possibility to use a Lanczos chain for solving the frequency
dependent problems. 

Added an experimental version of a global conjugate-gradient
solver of the linear response problem for phonons and dielectric constant.

A cleanup of gener_3d_slab.f90 and of supercell.f90. 
